--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "lovesick_girls_adminsite_backend",
+  "name": "adminsite_backend",
   "version": "1.0.0",
-  "description": "frontend project 2024",
+  "description": "Clone this repo and run npm install and then start \r ```\r git clone <repo>\r npm install\r npm start \r ```\r The server will be started in localhost:5001",
   "main": "index.js",
   "scripts": {
-    "start": "node --es-module-specifier-resolution=node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "ayenyeinsan,gloria,ruth",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.9.1"
+    "ejs": "^3.1.9",
+    "express": "^4.18.3",
+    "express-ejs-layouts": "^2.5.1",
+    "express-fileupload": "^1.4.3",
+    "mysql2": "^3.9.2"
   }
 }
