--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,9 +2,9 @@ name: Integration_CI_Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main","feature" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main","feature" ]
 
 jobs:
   build:
