--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     image: 29ayenyeinsan/adminsite_backend:latest
     
     environment:
-      DB_HOST: ${RDS_HOSTNAME}
-      DB_PASSWORD: ${RDS_PASSWORD}
-      DB_PORT: ${RDS_PORT}
+      DB_HOST:  ${{ secrets.RDS_HOSTNAME }}
+      DB_PASSWORD: ${secrets.RDS_PASSWORD}
+      DB_PORT: ${secrets.RDS_PORT}
       DB_NAME: bookstore
       SERVER_PORT: 5001
-
+    env_file:
+      - .env
     ports:
       - 5001:5001
 
