--- a/.github/workflows/deploy_to_host.yml
+++ b/.github/workflows/deploy_to_host.yml
@@ -35,7 +35,9 @@ jobs:
                 username: ${{secrets.HOST_USER_NAME}}
                 key: ${{ secrets.HOST_SSH_PRIVATE_KEY}}
                 port: 22
-                source: "docker-compose.yml"
+                source: |
+                   docker-compose.yml
+                   .env
                 target: "/home/ubuntu/admin_backend"
             - name: docker compose
               uses: appleboy/ssh-action@v0.1.10
