--- a/.github/workflows/deploy_to_host.yml
+++ b/.github/workflows/deploy_to_host.yml
@@ -8,6 +8,12 @@ on:
 jobs:
     docker:
         runs-on: ubuntu-latest
+        env:
+            DB_HOST: ${{ secrets.RDS_HOSTNAME }}
+            DB_PASSWORD: ${{ secrets.RDS_USERNAME}}
+            DB_PORT: ${{ secrets.RDS_PORT }}
+            DB_NAME: bookstore
+            SERVER_PORT: 5001
         steps: 
             - name: Checkout 
               uses: actions/checkout@v3
@@ -37,7 +43,6 @@ jobs:
                 port: 22
                 source: |
                    docker-compose.yml
-                   .env
                 target: "/home/ubuntu/admin_backend"
             - name: docker compose
               uses: appleboy/ssh-action@v0.1.10
