--- a/.github/workflows/deploy_to_host.yml
+++ b/.github/workflows/deploy_to_host.yml
@@ -63,7 +63,11 @@ jobs:
                      sudo docker-compose pull
 
                      sudo docker-compose up -d
-                     sudo docker exec admin_backend_adminsitebackend_1 sh -c 'echo "RDS_HOSTNAME=${{secrets.RDS_HOSTNAME }}\nRDS_USERNAME=m${{ secrets.RDS_USERNAME}}\nRDS_PASSWORD=${{secrets.RDS_PASSWORD}}\nRDS_PORT=${{secrets.RDS_PORT}}" > /app/.env'
+                     sudo docker exec admin_backend_adminsitebackend_1 sh -c 'echo "RDS_HOSTNAME=${{secrets.RDS_HOSTNAME }}" >> /app/.env'
+                     sudo docker exec admin_backend_adminsitebackend_1 sh -c 'echo " RDS_USERNAME=${{ secrets.RDS_USERNAME}}" >> /app/.env'
+                     sudo docker exec admin_backend_adminsitebackend_1 sh -c 'echo " RDS_PASSWORD=${{secrets.RDS_PASSWORD}}" >> /app/.env'
+                     sudo docker exec admin_backend_adminsitebackend_1 sh -c 'echo "RDS_PORT=${{secrets.RDS_PORT}}" >> /app/.env'
+                     sudo docker restart admin_backend_adminsitebackend_1
 
 
                     
