--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -2,7 +2,7 @@ name: Integration_CI_Test
 
 on:
   push:
-    branches: [ "main","feature" ]
+    branches: [ "main","feature",]
   pull_request:
     branches: [ "main","feature" ]
 
