--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.3",
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.4.3",
+    "express-mysql-session": "^3.0.0",
+    "express-session": "^1.18.0",
     "mysql2": "^3.9.2"
   }
 }
