--- a/.github/workflows/Katalon.yml
+++ b/.github/workflows/Katalon.yml
@@ -1,7 +1,7 @@
 name: CI
 on:
   push:
-    branches: [ main ]
+    branches: [ QA ] 
   pull_request:
     branches: [ main ]
 
@@ -17,3 +17,5 @@ jobs:
           version: '7.5.5'
           projectPath: '${{ github.workspace }}'
           args: '-noSplash -retry=0 -browserType=Chrome -statusDelay=15 -testSuitePath="Test Suites/bookieTestSuite" -apiKey= ${{ secrets.KATALON_API_KEY}} --config -webui.autoUpdateDrivers=true'
+    
+     
