--- a/.github/workflows/deploy_to_host.yml
+++ b/.github/workflows/deploy_to_host.yml
@@ -3,6 +3,10 @@ on:
     push:
         branches:
             - staging
+    pull_request:
+        branches:
+            - main
+            
 
     
 jobs:
